force-app/main/default/objects/HelpVoteOption__c/HelpVoteOption__c.object-meta.xml
<CustomObject>
    <description>Values that Users can select in casting Vote-type interactions</description>
    <label>Help Vote Option</label>
    <nameField>
        <label>Help Vote Option Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Help Vote Options</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>