force-app/main/default/objects/HelpVoteOption__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description>A category into which Vote Options can be grouped for broader analysis (such as sentiment tracking) across Vote Sets</description>
    <inlineHelpText>A category into which Vote Options can be grouped for broader analysis (such as sentiment tracking) across Vote Sets</inlineHelpText>
    <label>Category</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Positive</fullName>
                <color>#78C953</color>
                <label>Positive</label>
            </value>
            <value>
                <fullName>Neutral</fullName>
                <color>#FFCC33</color>
                <default>true</default>
                <label>Neutral</label>
            </value>
            <value>
                <fullName>Negative</fullName>
                <color>#FF0000</color>
                <label>Negative</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>