force-app/main/default/objects/HelpVoteOption__c/fields/DisplayOrder__c.field-meta.xml
<CustomField>
    <fullName>DisplayOrder__c</fullName>
    <description>Defines the order in which to present Help Vote Options within their Vote Set</description>
    <inlineHelpText>Defines the order in which to present Help Vote Options within their Vote Set</inlineHelpText>
    <label>Display Order</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>