force-app/main/default/objects/HelpVoteOption__c/fields/HelpVoteSet__c.field-meta.xml
<CustomField>
    <fullName>HelpVoteSet__c</fullName>
    <description>The set of Help Vote Options to which this entry belongs</description>
    <inlineHelpText>The set of Help Vote Options to which this entry belongs</inlineHelpText>
    <label>Help Vote Set</label>
    <referenceTo>HelpVoteSet__c</referenceTo>
    <relationshipLabel>Help Vote Options</relationshipLabel>
    <relationshipName>HelpVoteOptions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>