force-app/main/default/objects/HelpVoteOption__c/fields/OptionColour__c.field-meta.xml
<CustomField>
    <fullName>OptionColour__c</fullName>
    <description>Web / CSS colour, expressed as RGB Hex, used in certain circumstances to present or report on this Option</description>
    <inlineHelpText>Web / CSS colour, expressed as RGB Hex, used in certain circumstances to present or report on this Option</inlineHelpText>
    <label>Option Colour (Hex)</label>
    <length>6</length>
    <type>Text</type>
</CustomField>