force-app/main/default/objects/HelpVoteOption__c/fields/OptionLabel__c.field-meta.xml
<CustomField>
    <fullName>OptionLabel__c</fullName>
    <description>The text, if any, to display to the User when presenting this Option</description>
    <inlineHelpText>The text, if any, to display to the User when presenting this Option</inlineHelpText>
    <label>Option Label</label>
    <length>100</length>
    <type>Text</type>
</CustomField>