force-app/main/default/objects/HelpVoteOption__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>HelpVoteSet__c</columns>
    <columns>DisplayOrder__c</columns>
    <columns>NAME</columns>
    <columns>ImagePreview__c</columns>
    <columns>ImageClass__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>